--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots": ["./typings"]
+    "declaration": true
   }
 }
