--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sodacrew/expo-apple-search-ads-attribution",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Ethan Park",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@expo/config-plugins": "^4.1.1",
+    "@expo/config-plugins": "~7.2.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
@@ -65,7 +65,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "0.72.6",
     "react-native-builder-bob": "^0.18.2",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
